--- a/acme-dom.html
+++ b/acme-dom.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
+    <script src = 'acme-dom.js' defer></script>
     <link rel="stylesheet" href="amce-dom.css">
-    <link rel="stylesheet" href="acme-dom.js">
 </head>
 <body>
     <h2>Acme Employees DOM</h2>
-    <div id ='employees'>
-        
-    </div>
+    <ul id ='employees'>
+
+    </ul>
 </body>
 </html>
